k8s/base/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: yikou-ai
  labels:
    app: mysql
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
